# opencv_documents_comparer

./: .gitignore  .gitmodules  04_stat2.docx  20100416005850549.doc  Compare_Image.py  README.md  comapare_doc_docx.py  comapare_pp.py  config.py  helper.py  install_requirements.py  main.py  make_requirements.py  management.py  pyproject.toml  requariments.txt  requirements.txt  run.py  run_doc_docx_compare_image.py  run_doc_docx_compare_statistic.py  run_doc_docx_full_test.py  run_exel.py  run_exel_step2.py  run_pp.py  run_ppt_pptx.py  run_word_step1.py  run_word_step2.py  run_xls_xlsx_compare_image.py  run_xls_xlsx_compare_statistic.py  run_xls_xlsx_full_test.py  settings.py  tasks.py  test.py  testTitle.py  testing_function.py  testpywin32.py  tools.py  var.py  variables.py  word.py
.github/: dependabot.yml
.github/workflows/: json-lint.yml  linting.yml  pytest.yml  update-deps.yml
configurations/: project_configurator.py
data/: StaticData.py
framework/: FileUtils.py  StaticData.py  compare_image.py  converter.py  excel.py  fileutils.py  libre_office.py  libre_presentation.py  power_point.py  singleton.py  telegram.py  word.py  xmllint.py
framework/actions/: core_actions.py  document_actions.py  host_actions.py  key_actions.py  report_actions.py  x2t_actions.py  x2ttester_actions.py  xml_actions.py
frameworks/: StaticData.py
frameworks/decorators/: decorators.py
frameworks/documents_actions/: __init__.py  document_actions.py
frameworks/editors/: __init__.py  document.py  editor.py  events.py  key_actions.py
frameworks/host_control/: FileUtils.py  HostInfo.py  __init__.py  singleton.py
frameworks/image_handler/: __init__.py  compare_image.py  image.py
frameworks/libre_office/: __init__.py  libre_office.py  macroses.py  opener_libre.py  screen.py
frameworks/onlyoffice/: __init__.py
frameworks/report/: __init__.py  report.py
frameworks/report_action/: report.py
frameworks/s3/: __init__.py
frameworks/telegram/: __init__.py  telegram.py
frameworks/xmllint/: XmllintReport.py  __init__.py  xmllint.py
libs/: Compare_Image.py  Exel.py  Exel_image_compaire.py  Word_image_compare.py  get_error.py  helper.py  power_point.py  word.py
libs/helpers/: compare_image.py  document_helper.py  error_handler.py  exception_file.json  fileutils.py  get_error.py  helper.py  logger.py  runner.py
libs/openers/: opener_docx_with_ms_word.py  (+6 more)
tests/: __init__.py  compare_tests.py  open_tests.py  test.py  testImg.py  testTitle.py  test_exel_get_statistic.py  testgif.py  testing_function.py  testpywin32.py  x2ttester_conversion.py
(+124 files in other folders)
