[tool.poetry]
name = "opencv-documents-comparer"
version = "2.0.0"
description = ""
authors = ["l02 <l8556@outlook.com>"]
readme = "README.md"
packages = [{include = "opencv_documents_comparer"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.10.0.84"
numpy = "^2.1.2"
scikit-image = "0.24.0"
imageio = "^2"
pyautogui = "^0.9.54"
rich = "^13.9.3"
invoke = "^2.2.0"
pillow = "^11.0.0"
pandas = "^2"
mss = "^9.0.2"
pytest = "^8.3.3"
pydantic = "^2"
host-tools = { git = "https://github.com/l8556/host_tools.git", branch = "master" }
telegram = { git = "https://github.com/l8556/TelegramApi.git", branch = "master" }
s3wrapper = { git = "https://github.com/l8556/S3Wrapper.git", branch = "master" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
